# recipie-management

./: .gitignore  CLAUDE.md
apps/backend-api/: Dockerfile  alembic.ini  pyproject.toml
apps/backend-api/alembic/: env.py
apps/backend-api/alembic/versions/: 0001_initial_schema.py  0002_recipe_filter_indexes.py  0003_recipe_reviews.py  0004_foods_table.py  0005_ingredient_food_link.py  0006_food_portions.py  0007_recipe_cached_macros.py  0008_search_upgrade.py
apps/backend-api/app/: main.py
apps/backend-api/app/api/v1/: auth.py  browse.py  foods.py  ingredients.py  recipes.py  reviews.py  router.py  tags.py  users.py
apps/backend-api/app/core/: config.py  database.py  security.py
apps/backend-api/app/models/: __init__.py  food.py  food_portion.py  identity.py  ingredient.py  recipe.py  review.py  tag.py  user.py
apps/backend-api/app/schemas/: __init__.py  food.py  ingredient.py  recipe.py  review.py  tag.py  user.py
apps/backend-api/app/services/: browse_sections.py  food_search.py  nutrition.py
apps/backend-api/app/storage/: images.py  s3.py
apps/backend-api/scripts/: import_usda_foods.py
apps/backend-api/tests/: test_nutrition_units.py
apps/web-app/: index.html  package-lock.json  package.json
apps/web-app/src/: App.tsx  index.css  main.tsx
deploy/: .env.example  docker-compose.yml
deploy/helm/: Chart.yaml  values-prod.yaml  values.yaml
deploy/helm/templates/: NOTES.txt  _helpers.tpl  cnpg-cluster.yaml  (+13 more)
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: clear_db.sh  import_usda_foods.py  match_ingredient_foods.py  seed_recipes.sh
(+17 files in other folders)
